# quantum-cryptography-intransit

./: .cursorrules  .gitignore  Dockerfile  PLAN.md  PLAN_v3_KEY_WRAPPING.md  README.md  article.md  debug_core.py  debug_imports.py  debug_minimal.py  detailed_step_by_step.md  docker-compose.yml  leadership_brief.md  linkedin_post.md  production_roadmap.md  protocol_breakdown.md  pyproject.toml  requirements.txt  run_services.sh  security_mitigations.md  technical_writeup.md  whitepaper.md
src/: alice.py  app.py  client_demo.py  core.py  demo.py  file_demo.py  server.py  ticker.py  time_keeper.py
src/static/: script.js  style.css
src/templates/: index.html
tests/: test_core.py  test_crypto.py  test_protocol.py  test_timing_attack.py  test_v3_api.py
